--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -63,8 +63,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Scripts\CameraCollision.cs" />
-    <Compile Include="Assets\Scripts\FirstPersonController.cs" />
+    <Compile Include="Assets\Scripts\FPSController.cs" />
+    <Compile Include="Assets\Scripts\ProjectileController.cs" />
     <Reference Include="UnityEngine">
       <HintPath>D:/Program Files/Unity Editor/2019.3.13f1/Editor/Data/Managed/UnityEngine/UnityEngine.dll</HintPath>
     </Reference>
