--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -248,6 +248,9 @@
     <Reference Include="UnityEditor">
       <HintPath>D:/Program Files/Unity Editor/2019.3.13f1/Editor/Data/Managed/UnityEditor.dll</HintPath>
     </Reference>
+    <Reference Include="DOTween">
+      <HintPath>D:/User/Documents/GitHub/Scuffed Metroid Prime/Assets/Plugins/Demigiant/DOTween/DOTween.dll</HintPath>
+    </Reference>
     <Reference Include="netstandard">
       <HintPath>D:/Program Files/Unity Editor/2019.3.13f1/Editor/Data/NetStandard/ref/2.0.0/netstandard.dll</HintPath>
     </Reference>
@@ -621,7 +624,12 @@
       <HintPath>D:/User/Documents/GitHub/Scuffed Metroid Prime/Library/ScriptAssemblies/UnityEditor.UI.dll</HintPath>
     </Reference>
   </ItemGroup>
-  <ItemGroup></ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="Assembly-CSharp-firstpass.csproj">
+      <Project>{2017A242-1025-1510-0603-3D755C04A581}</Project>
+      <Name>Assembly-CSharp-firstpass</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
